feat(backend): Modified entire backend to be more modular
